Added Patient button features

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/strings.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="title_activity_records">Records</string>
     <string name="title_activity_record_reading">RecordReading</string>
     <string name="title_activity_new_recording">NewRecording</string>
+    <string name="save_patient_button">Save Patient</string>
+    <string name="title_activity_profile_list">Patients</string>
+    <string name="title_activity_profile">Patient Info</string>
 </resources>
