Views have Correct Names, new eeg picture, no more muscle

--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/strings.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="records_button">Records</string>
     <string name="new_recording_button">New Recording</string>
     <string name="title_activity_records">Records</string>
-    <string name="title_activity_record_reading">RecordReading</string>
-    <string name="title_activity_new_recording">NewRecording</string>
+    <string name="title_activity_record_reading">Patient Graph Record</string>
+    <string name="title_activity_new_recording">Select Channels</string>
     <string name="save_patient_button">Save Patient</string>
     <string name="title_activity_profile_list">Patients</string>
     <string name="title_activity_profile">Patient Info</string>
