--- a/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/strings.xml
+++ b/EEG-Android-App-master/Bluetooth_Elicited_Brain_Stimulation/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="tutorial_text">This is where the tutorial would go</string>
     <string name="start_recording_accessibility">Start recording</string>
     <string name="new_recording_status_text_string">Start recording</string>
+    <string name="clinician_button">Clinician Account</string>
 </resources>
